.gsd.migrating/exec/b88cb16d-6c4e-49b7-81a3-1d329d146835.stderr
error: prefix `plan` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1396:39
     |
1396 | ...ld plan");
     |       ^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1396 |             pad fake operation should plan ");
     |                                           +

error: prefix `complete` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1402:47
     |
1402 | ...ld complete");
     |       ^^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1402 |             panic!("valid fake request should complete ");
     |                                                       +

error: prefix `plan` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1422:54
     |
1422 | ...ld plan");
     |       ^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1422 |             panic!("registered fake operation should plan ");
     |                                                          +

error: prefix `rejections` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1428:81
     |
1428 | ...on rejections");
     |       ^^^^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1428 |             panic!("operation failures are completed payloads, not pre-mutation rejections ");
     |                                                                                           +

error: prefix `failure` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1441:34
     |
1441 | ...on failure")
     |       ^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1441 |             Some("fake operation failure ")
     |                                         +

error: prefix `txt` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1449:73
     |
1449 | ...nk.txt");
     |       ^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1449 |         let filesystem = FakeFilesystem::default().with_file("Data/junk.txt ");
     |                                                                            +

error: prefix `results` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1462:68
     |
1462 | ...ss results");
     |       ^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1462 |             panic!("target-required operation must reject pathless results ");
     |                                                                           +

error: prefix `txt` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1481:24
     |
1481 | ...nk.txt",
     |       ^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1481 |             "Data/junk.txt ",
     |                           +

error: prefix `confirmation` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1486:64
     |
1486 | ...re confirmation");
     |       ^^^^^^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1486 |             panic!("target-backed operation should plan before confirmation ");
     |                                                                            +

error: prefix `execute` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1492:61
     |
1492 | ...re execute");
     |       ^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1492 |             panic!("missing confirmation must reject before execute ");
     |                                                                    +

error: prefix `execute` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1505:62
     |
1505 | ...re execute");
     |       ^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1505 |             panic!("declined confirmation must reject before execute ");
     |                                                                     +

error: prefix `txt` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1528:27
     |
1528 | ...ng.txt",
     |       ^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1528 |             "Data/missing.txt ",
     |                              +

error: prefix `plan` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1532:68
     |
1532 | ...ot plan");
     |       ^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1532 |             panic!("precondition checks happen during execute, not plan ");
     |                                                                        +

error: prefix `execute` is unknown
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1538:60
     |
1538 | ...re execute");
     |       ^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1538 |             panic!("failed precondition must reject before execute ");
     |                                                                   +

error[E0765]: unterminated double quote string
    --> /mnt/j/cmt-rs/src/services/autofix.rs:1546:72
     |
1546 |                   .is_some_and(|diagnostic| diagnostic.contains("NotFound"))
     |  ________________________________________________________________________^
1547 | |         );
1548 | |         assert_eq!(preconditions.load(Ordering::SeqCst), 1);
1549 | |         assert_eq!(executes.load(Ordering::SeqCst), 0);
...    |
1559 | | }
     | |__^

Error writing files: failed to resolve mod `autofix`: cannot parse /mnt/j/cmt-rs/src/services/autofix.rs
